# submoduler

./: .gitignore  Dockerfile  README.md  pyproject.toml  submoduler-example-config.yaml  submoduler-organization-example-config.yaml  submoduler.yaml
.github/workflows/: deploy.yaml
requirements/: common.txt  dev.txt
submoduler/: auth.py  main.py  repo_meta.py  submoduler.py
submoduler/tests/: tests_base.py
