[tool.poetry]
name = "submoduler"
version = "0.1.0"
description = ""
authors = ["ginwakeup"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
PyYAML = "^6.0"
loguru = "^0.6.0"
GitPython = "^3.1.27"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
